[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { git = "https://github.com/serendipity-crypto/primus-fhe.git", branch = "ssle", default-features = false }
network = { version = "0.1.0", path = "../network" }
rand.workspace = true
rand_core.workspace = true
bytemuck = "1.22.0"
crossbeam = "0.8.4"
parking_lot = "0.12"

[features]
default = ["concrete-ntt"]
concrete-ntt = ["algebra/concrete-ntt"]
nightly = ["algebra/nightly"]
