[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { git = "https://github.com/serendipity-crypto/primus-fhe.git", branch = "ajax", default-features = false }
network = { version = "0.1.0", path = "../network" }
rand.workspace = true
bytemuck.workspace = true
crossbeam = "0.8.4"
parking_lot = "0.12"
tokio.workspace = true
libp2p.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[features]
default = ["concrete-ntt"]
concrete-ntt = ["algebra/concrete-ntt"]
nightly = ["algebra/nightly"]
