[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serial_test.workspace = true